--- a/ai-capture-real/sidepanel/style.css
+++ b/ai-capture-real/sidepanel/style.css
@@ -3,10 +3,10 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 16px 0 0;
+  padding: 0;
   box-sizing: border-box;
   background-color: #010101;
-  font-family: "Roboto", "-apple-system", "BlinkMacSystemFont", sans-serif;
+  font-family: 'Roboto', '-apple-system', 'BlinkMacSystemFont', sans-serif;
   font-weight: 600;
   position: relative;
 }
@@ -39,38 +39,40 @@ li {
 /* ------활성화된 캡쳐 이미지 영역------ */
 #nowCapturedImage {
   width: calc(100% - 32px);
+  max-height: 200px;
   margin: 16px auto;
   height: fit-content;
   position: relative;
   overflow: hidden;
   border-radius: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   box-sizing: content-box;
+  background-color: #1e1e1e;
 }
 
 /* 이미지 없을 때 기본 박스 */
 .noImage {
   min-height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #1e1e1e;
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='30' ry='30' stroke='%23E1FF3DFF' stroke-width='3' stroke-dasharray='6%2c 14' stroke-dashoffset='10' stroke-linecap='square'/%3e%3c/svg%3e");
 }
 
 .noImage::after {
-  content: "";
+  content: '';
   display: flex;
   width: 38px;
   height: 38px;
-
-  background: url("../images/gallery.svg") no-repeat;
+  background: url('../images/gallery.svg') no-repeat;
 }
 
 #nowCapturedImage > img {
   position: relative;
   width: 100%;
-  /* object-fit: contain; */
-  /* object-position: center; */
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 
 /* x버튼 */
@@ -90,7 +92,7 @@ li {
   z-index: 10;
 }
 #nowCapturedImage:not(.noImage):hover::after {
-  content: "";
+  content: '';
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
@@ -113,11 +115,12 @@ li {
   border-radius: 60px;
   font-size: 20px;
   font-weight: 600;
-  height: 74px;
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 12px;
+  flex-shrink: 0;
 }
 #captureBtn:hover {
   filter: saturate(180%);
@@ -131,27 +134,14 @@ li {
   flex-grow: 1;
   overflow: hidden;
   position: relative;
-  /* 직접붙이고 되는지 둘다 같이되는지 확인 필요 */
   transform: translate(0, 100%);
-  transform: translate(0, 0);
-}
-@keyframes showUp {
-  0% {
-    transform: translate(0, 100%);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-.showUp {
-  animation: showUp 0.3s ease-in forwards;
-}
-.showDown {
-  animation: showUp reverse 0.3s ease-in forwards;
+  transition: all 0.4s ease;
+  display: flex;
+  flex-direction: column;
 }
 
 /* 관련 탭 */
-div[role="tablist"] {
+div[role='tablist'] {
   width: calc(100% - 38px);
   overflow-x: auto;
   display: flex;
@@ -159,8 +149,9 @@ div[role="tablist"] {
   font-size: 18px;
   margin: 0;
   padding: 30px 10px 10px 28px;
+  flex-shrink: 0;
 }
-div[role="tablist"] button {
+div[role='tablist'] button {
   height: 44px;
   padding: 16px;
   display: flex;
@@ -171,35 +162,48 @@ div[role="tablist"] button {
   transition: all 0.1s;
   font-weight: 600;
 }
-
 .selectedTab {
   color: white;
   background-color: #010101;
 }
 
+.innerContent {
+  flex-grow: 1;
+  height: 100%;
+  display: flex;
+  width: 200%;
+  transition: all 0.2s ease;
+}
 /* 이미지 검색 결과 리스트 */
 
 .searchedImageList {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 0 28px;
-  gap: 8px;
+  padding: 0 28px 10px;
   width: calc(100% - 56px);
+  height: calc(100% - 100px);
   overflow-y: auto;
+  font-size: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .searchedImageList li {
+  display: inline-block;
+  font-size: 0;
+  width: calc(50% - 4px);
   aspect-ratio: 1 / 1;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 18px;
   position: relative;
+  flex-shrink: 0;
+  margin-bottom: 8px;
+}
+.searchedImageList li:nth-child(odd) {
+  margin-right: 8px;
 }
 
 .searchedImageList li img {
   height: 100%;
+  width: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -246,32 +250,11 @@ div[role="tablist"] button {
   width: calc(100% - 20px);
 }
 
-/* 검색결과 두개  좌우로 나오기 안보이기 */
-@keyframes firstSlideOut {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(-100%, 0);
-  }
-}
-@keyframes secondSlideIn {
-  0% {
-    transform: translate(100%, 0);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-.firstSlideOut {
-  animation: firstSlideOut 0.3s ease-in forwards;
-}
-.firstSlideIn {
-  animation: firstSlideOut reverse 0.3s ease-in forwards;
-}
-.secondSlideIn {
-  animation: secondSlideIn 0.3s ease-in forwards;
-}
-.firstSlideOut {
-  animation: secondSlideIn reverse 0.3s ease-in forwards;
+/* 관련 조합 리스트 */
+.relatedCombinationList {
+  padding: 0 28px 10px;
+  width: calc(100% - 56px);
+  height: 100%;
+  overflow-y: auto;
+  transform: translate(100%, 0);
 }
