--- a/ai-capture-real/sidepanel/style.css
+++ b/ai-capture-real/sidepanel/style.css
@@ -28,6 +28,10 @@ li {
   list-style-type: none;
 }
 
+p {
+  word-break: break-all;
+}
+
 .mainContainer {
   display: flex;
   flex-direction: column;
@@ -38,10 +42,10 @@ li {
 
 /* ------활성화된 캡쳐 이미지 영역------ */
 #nowCapturedImage {
+  flex-shrink: 0;
   width: calc(100% - 32px);
-  max-height: 200px;
+  height: 200px;
   margin: 16px auto;
-  height: fit-content;
   position: relative;
   overflow: hidden;
   border-radius: 30px;
@@ -254,7 +258,74 @@ div[role='tablist'] button {
 .relatedCombinationList {
   padding: 0 28px 10px;
   width: calc(100% - 56px);
-  height: 100%;
+  height: calc(100% - 100px);
   overflow-y: auto;
   transform: translate(100%, 0);
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.recommendItem h2 {
+  font-size: 20px;
+  margin-top: 24px;
+  margin-bottom: 8px;
+}
+
+.recommendItem > div[role='button'] {
+  width: 100%;
+  max-height: 220px;
+  border-radius: 18px;
+  overflow: hidden;
+  position: relative;
+}
+.recommendItem > div img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.reasonText {
+  margin-top: 8px;
+}
+.finalText {
+  margin-top: 24px;
+}
+
+/* -------스켈레톤------- */
+.skeleton-image {
+  width: 100%;
+  aspect-ratio: 1;
+  max-height: 220px;
+  border-radius: 4px;
+  background: #d9d9d9;
+  animation: shimmer 1.5s infinite linear;
+}
+
+.skeleton-text {
+  width: 100%;
+  height: 20px;
+  background: #d9d9d9;
+  border-radius: 4px;
+  margin-bottom: 6px;
+  animation: shimmer 1.5s infinite linear;
+}
+
+.skeleton-text.short {
+  width: 60%;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: 100%;
+  }
+  100% {
+    background-position: -100%;
+  }
+}
+
+.skeleton-image,
+.skeleton-text {
+  background: linear-gradient(90deg, #d9d9d9 25%, #f7f7f7 50%, #d9d9d9 75%);
+  background-size: 200% 100%;
 }
